@@ -1,11 +1,13 @@
 package es.rafapuig;
 
 import es.rafapuig.model.Persona;
+import org.junit.jupiter.api.Test;
 
 import static es.rafapuig.model.Personas.*;
 
 import java.util.*;
 import java.util.function.Function;
+import java.util.stream.Stream;
 
 public class SetDemo {
 
@@ -13,6 +15,10 @@ public class SetDemo {
             {"pera", "manzana", "limón", "kiwi", "cereza", "uva", "melocotón", "piña", "naranja"};
 
     public static void main(String[] args) {
+        new SetDemo().run();
+    }
+
+    void run() {
 
         Set<String> setOfFruits = Set.of(frutas);
 
@@ -33,16 +39,39 @@ public class SetDemo {
         //sortedSetTest();
         //sortedSetTest2();
         //sortedSetTest3();
-
     }
 
+    /**
+     * Imprimir un Set por consola
+     */
+    static void print(Collection<?> set) {
+        System.out.println(set);
+    }
+
+    /**
+     * Imprimir un Set por consola
+     */
     static void print(Set<?> set) {
         System.out.println(set);
     }
 
+    /**
+     * Test del metodo contains aplicado a un Set
+     */
     static void containsTest(Set<?> set, Object o) {
         System.out.println("set.contains(" + o + ") = " + set.contains(o));
     }
+
+    static <T> void addToSet(Set<T> set, T item) {
+        System.out.print("Añadiendo: " + item + "... ");
+
+        System.out.print("set.contains(" + item + "' = " + set.contains(item) + " -> ");
+
+        boolean addedOK = set.add(item); //Añadir el elemento al Set
+
+        System.out.println(addedOK ? "OK" : "No se ha podido añadir");
+    }
+
 
     static void addPersona(Set<Persona> set, Persona persona) {
         System.out.print("Añadiendo la persona: " + persona.getNombre() + "... ");
@@ -55,11 +84,11 @@ public class SetDemo {
     }
 
 
-    static <T,V> void hashcodeTest(Set<T> set, T original, T clone, Function<T, V> map) {
+    static <T, V> void hashcodeTest(Set<T> set, T original, T clone, Function<T, V> map) {
         System.out.println(
-                "original: '" + map.apply(original) + "'.hashCode() = " + original.hashCode());
+                "original: " + map.apply(original) + ".hashCode() = " + original.hashCode());
         System.out.println(
-                "clone: '" + map.apply(clone) + "'.hashCode() = " + clone.hashCode());
+                "clone:    " + map.apply(clone) + ".hashCode() = " + clone.hashCode());
     }
 
     static void hashcodeTest(Set<Persona> set) {
@@ -68,13 +97,20 @@ public class SetDemo {
         Persona fulano = new Persona("Fulanito de Tal", "2000-01-01");
         //System.out.println("fulano: '" + fulano.getNombre() + "' hashCode() = " + fulano.hashCode());
 
-        Persona mengano = fulano.cloneMe();
+        Persona mengano = fulano.clone();
         //System.out.println("mengano: '" + mengano.getNombre() + "' hashCode() = " + mengano.hashCode());
 
-        hashcodeTest(set, fulano, mengano,Persona::toString);
+        hashcodeTest(set, fulano, mengano, Persona::toString);
     }
 
-    static <T> void equalsTest(Set<T> set, T original, T clone) {
+    static <T> void hashcodeTest(Set<T> set, T original, T clone) {
+        System.out.println("---HASH CODE TEST---");
+        //Es necesario que la clase implemente hashcode para que no haya duplicados
+        // en colecciones que usan tabla hash
+        hashcodeTest(set, original, clone, T::toString);
+    }
+
+    static <T> void equalsTest(T original, T clone) {
 
         System.out.println("---EQUALS TEST---");
 
@@ -82,21 +118,25 @@ public class SetDemo {
         //Si no, un objeto solo puede ser igual a si mismo
 
         System.out.println("original = " + original);
-        System.out.println("clone = " + clone);
+        System.out.println("clone    = " + clone);
         System.out.println("clone.equals(original) = " + clone.equals(original));
 
-        //containsTest(set, amadorDenador);
+        Set<T> set = new HashSet<>();
+        set.add(original);
+
         System.out.println("set.contains(original) = " + set.contains(original));
-        System.out.println("set.contains(clone) = " + set.contains(clone));
-    }
-
-    static void equalsTest(Set<Persona> set) {
-        equalsTest(set, amadorDenador, amadorDenador.cloneMe());
+        System.out.println("set.contains(clone)    = " + set.contains(clone));
     }
 
 
+    @Test
+    void equalsTest() {
+        equalsTest(amadorDenador, amadorDenador.clone());
+    }
 
-    private static void hashSetTest1() {
+
+    @Test
+    void hashSetTest1() {
         Set<Integer> set = new HashSet<>();
 
         set.add(7);
@@ -107,33 +147,48 @@ public class SetDemo {
         set.add(13);
         set.add(1);
 
-        System.out.println(set);
+        print(set);
 
+        // Imprimir la lista de los códigos hash de los elementos del set
         //System.out.println(set.stream().map(Object::hashCode).toList());
     }
 
-    private static void hashSetTest2() {
+    @Test
+    void hashSetTest2() {
 
-        Set<String> set = new HashSet<>(List.of(frutas));
+        Set<String> set = new HashSet<>(20, 1);// List.of(frutas));
+        set.addAll(Arrays.asList(frutas));
 
-        //No se respeta el orden en que son insertados
+        //En un HashSet NO se respeta el orden en que son insertados
         System.out.println(set);
 
-        //System.out.println(set.stream().map(Object::hashCode).toList());
+        System.out.println(Stream.of(frutas).toList());
+        System.out.println(Stream.of(frutas).map(Object::hashCode).map(code -> code % 20).toList());
+        System.out.println(Stream.of(frutas).map(Object::hashCode).toList());
+
+
+        System.out.println(set.stream().map(Object::hashCode).map(code -> code % 20).toList());
     }
 
-    private static void hashSetTest3() {
+
+    @Test
+    void hashSetTest3() {
         Set<Persona> personaSet = new HashSet<>();
 
         addPersona(personaSet, aitorTilla);
         addPersona(personaSet, belenTilla);
         addPersona(personaSet, armandoBronca);
-        addPersona(personaSet, armandoBronca.cloneMe());
+
+        // En un set no se pueden añadir elementos duplicados
+        // Un elemento E es duplicado si es igual a algún elemento del Set
+        addPersona(personaSet, armandoBronca.clone()); // Añadir un elemento igual
 
         print(personaSet);
     }
 
-    private static void hashSetTest4() {
+
+    @Test
+    void hashSetTest4() {
         Set<Persona> personaSet = new HashSet<>();
 
         for (Persona p : personas) {
@@ -142,26 +197,30 @@ public class SetDemo {
         print(personaSet);
     }
 
-    private static void hashSetTest5() {
+    @Test
+    void hashSetTest5() {
 
-        //Un HashSet necesita y se basa para comprobar duplicados y si contiene ya el elemento en que la clase
-        //de los elementos implemente no solo equals si tambien hashcode (los 2 metodos a la vez)
+        // Un HashSet necesita que la clase de los elementos implemente
+        // no solo equals si también hashcode (los 2 metodos a la vez)
+        // El HasSet se basa es esos metodos para comprobar duplicados y si ya contiene el elemento
 
         Set<Persona> personaSet = new HashSet<>(personaList);
 
-        containsTest(personaSet, armandoBronca.cloneMe());
+        containsTest(personaSet, armandoBronca.clone());
 
-        //El metodo contains para un HashSet se basa en la igualdad del hashocde y de equals
-        addPersona(personaSet, armandoBronca.cloneMe());
+        //El metodo contains para un HashSet se basa en la igualdad del hashCode y de equals
+        addPersona(personaSet, armandoBronca.clone());
         print(personaSet);
 
-        hashcodeTest(personaSet);
-        equalsTest(personaSet, amadorDenador, amadorDenador.cloneMe());
+        hashcodeTest(personaSet, amadorDenador, amadorDenador.clone());
+        equalsTest(amadorDenador, amadorDenador.clone());
 
         print(personaSet);
     }
 
-    private static void linkedHashSetTest1() {
+
+    @Test
+    void linkedHashSetTest1() {
         Set<Integer> set = new LinkedHashSet<>();
 
         set.add(7);
@@ -172,70 +231,110 @@ public class SetDemo {
         set.add(13);
         set.add(1);
 
-        //Se repeta el orden en el que son insertados los elementos
+        //Se respeta el orden en el que son insertados los elementos al iterarlo
         System.out.println(set);
     }
 
-    private static void linkedHashSetTest2() {
+    @Test
+    void linkedHashSetTest2() {
 
         Set<String> set = new LinkedHashSet<>(List.of(frutas));
 
-        //No se respeta el orden en que son insetados, se colocan segun su hashcode
-        System.out.println(set);
+        System.out.print("Lista:");
+        System.out.println(List.of(frutas));
 
-        //System.out.println(set.stream().map(Object::hashCode).toList());
+        System.out.print("Set:  ");
+        ;
+        //Se respeta el orden en el que son insertados los elementos al iterarlo
+        System.out.println(set);
     }
 
-    private static void linkedHashSetTest() {
+    @Test
+    void linkedHashSetTest() {
         Set<Persona> personaSet = new LinkedHashSet<>();
 
-        //Se respete el orden de insercion
+        //Se respeta el orden de inserción
         personaSet.add(aitorTilla);
         personaSet.add(belenTilla);
         personaSet.add(armandoBronca);
 
         hashcodeTest(personaSet);
 
-        equalsTest(personaSet, amadorDenador, amadorDenador.cloneMe());
+        equalsTest(amadorDenador, amadorDenador.clone());
     }
 
     private static void linkedHashSetEqualsTest() {
         Set<Persona> personaSet = new LinkedHashSet<>(personaList);
-        equalsTest(personaSet, amadorDenador, amadorDenador.cloneMe());
+        equalsTest(amadorDenador, amadorDenador.clone());
     }
 
-    static void linkedHashSetTest3() {
+    @Test
+    void linkedHashSetTest3() {
         Set<Persona> personaSet = new LinkedHashSet<>();
-
         performTests(personaSet);
-
     }
 
-    private static void sortedSetTest() {
-        SortedSet<Persona> personaSet =
-                new TreeSet<>(Comparator.comparing(Persona::getFechaNacimiento)); //Persona::compareByEdad);
 
+    // -------------- Sorted sets -----------------------------------------------------------
+
+
+    @Test
+    void testSortedSetUsesComparisonToEquality() {
+        // Comparador de personas según su fecha de nacimiento
+        Comparator<Persona> comparator = Comparator.comparing(Persona::getFechaNacimiento);
+
+        // Crear un Set ordenado cuyo criterio es la fecha de nacimiento de los elementos (Persona)
+        SortedSet<Persona> personaSet = new TreeSet<>(comparator); //Persona::compareByEdad);
+
+        // Añadimos tres personas al conjunto
         personaSet.add(aitorTilla);
         personaSet.add(belenTilla);
         personaSet.add(armandoBronca);
 
-        //No se añade en un TreeSet porque se hace mediante el comparador la comprobacion de duplicado
-        personaSet.add(new Persona(armandoBronca.getNombre(), armandoBronca.getFechaNacimiento()));
+        print(personaSet);
 
-        personaSet.add(sandraMatica);
-        personaSet.add(amadorDenador);
-        personaSet.add(estherMalgin);
+        // Creamos una nueva persona con la misma fecha de nacimiento que una persona ya incluida en el Set
+        Persona perico = new Persona("Perico Palotes", armandoBronca.getFechaNacimiento());
 
-
-        System.out.println(personaSet);
-
-        System.out.println("personaSet.first() = " + personaSet.first());
-        System.out.println("personaSet.last() = " + personaSet.last());
-        System.out.println("personaSet.headSet(Armando Bronca) = " + personaSet.headSet(new Persona("Armando Bronca", "1982-08-13")));
-        System.out.println("personaSet.tailSet(Armando Bronca) = " + personaSet.tailSet(new Persona("Armando Bronca", "1982-08-13")));
+        //No se añadirá en un TreeSet porque la comprobación de duplicado se hace mediante el comparador
+        // Y Perico tiene la misma edad que un elemento del conjunto: Armando
+        addToSet(personaSet, perico); //equivale a personaSet.add(perico); pero con info
     }
 
-    private static void sortedSetTest2() {
+    @Test
+    void sortedSetTest2() {
+        // Comparador de personas según su fecha de nacimiento
+        Comparator<Persona> comparator = Comparator.comparing(Persona::getFechaNacimiento);
+
+        // Crear un Set ordenado cuyo criterio es la fecha de nacimiento de los elementos (Persona)
+        SortedSet<Persona> personaSet = new TreeSet<>(comparator); //Persona::compareByEdad);
+
+        // Añadimos seis personas al conjunto (de menor a mayor fecha de nacimiento)
+        personaSet.add(estherMalgin);
+        personaSet.add(aitorTilla);
+        personaSet.add(belenTilla);
+        personaSet.add(armandoBronca);
+        personaSet.add(amadorDenador);
+        personaSet.add(sandraMatica);
+
+        // El metodo first devuelve el primer elemento de un conjunto ordenado
+        // Persona con fecha nacimiento menor del conjunto (la de más edad)
+        System.out.println("personaSet.first() = " + personaSet.first());
+
+        // El metodo last devuelve el último elemento de un conjunto ordenado
+        // Persona con fecha nacimiento mayor del conjunto (la de menos edad)
+        System.out.println("personaSet.last() = " + personaSet.last());
+
+        // El metodo headSet devuelve una vista porción del Set que contiene los elementos estrictamente menores
+        // Personas nacidas antes que Armando Bronca
+        System.out.println("personaSet.headSet(" + armandoBronca + ") = " + personaSet.headSet(armandoBronca));
+
+        // El metodo taiSet devuelve una vista porción del Set que contiene los elementos mayores o iguales
+        // Personas nacidas el mismo día o después que Armando Bronca
+        System.out.println("personaSet.tailSet(" + armandoBronca + ") = " + personaSet.tailSet(armandoBronca));
+    }
+
+    private static void sortedSetTest3() {
 
         SortedSet<Integer> sortedSet = new TreeSet<>(Comparator.<Integer>naturalOrder().reversed());
 
@@ -247,32 +346,39 @@ public class SetDemo {
 
         System.out.println(sortedSet);
 
+        // Persona mas joven del conjunto
         System.out.println("first() = " + sortedSet.first());
+        // Persona mas
         System.out.println("last() = " + sortedSet.last());
         System.out.println("headSet(3) = " + sortedSet.headSet(3));
         System.out.println("tailSet(3) = " + sortedSet.tailSet(3));
     }
 
-    static void sortedSetTest3() {
+
+    @Test
+    void sortedSetTest4() {
 
         System.out.println("\nSORTED SET TEST");
 
-        //El TreeSet solamante se basa en el comparador para comprobar si existen duplicador
-        //Realiza la comprobacion de igualdad mediante el comparador
-        //No necesita que la clase de los elementos implemente equals ni hashcode (es ignorado)
-        //Si implementamos el hashcode, podremos escribir un comparador mas conveniente que ordene por el criterio que queramos
-        // pero que no considere 2 elementos iguales si no lo son del todo, y solo lo son por el criterio de ordenacion
+        // El TreeSet solamente se basa en el comparador para comprobar si existen duplicador
+        // Realiza la comprobación de igualdad mediante el comparador
+        // No necesita que la clase de los elementos implemente equals ni hashcode (es ignorado)
+        // Si implementamos el hashcode,
+        // podremos escribir un comparador más conveniente que ordene por el criterio que queramos
+        // pero que no considere 2 elementos iguales si no lo son del todo, y solo lo son por el criterio de ordenación
 
         SortedSet<Persona> personaSet = new TreeSet<>(
                 Comparator.comparing(Persona::getFechaNacimiento)
                         .thenComparing(Persona::getNombre));
-        //.thenComparing(Persona::hashCode)); //Si añadimos el hashcode, conseguimos que se tenga en cuanta el hascode para añadir
+        //.thenComparing(Persona::hashCode));
+        // Si añadimos el hashcode, conseguimos que se tenga en cuanta el hashCode para poder añadir elementos
 
         performTests(personaSet);
 
     }
 
-    private static void performTests(Set<Persona> personaSet) {
+
+    void performTests(Set<Persona> personaSet) {
         for (Persona p : personas) {
             addPersona(personaSet, p);
         }
@@ -282,11 +388,56 @@ public class SetDemo {
         addPersona(personaSet, new Persona("Perico Palotes", armandoBronca.getFechaNacimiento()));
         addPersona(personaSet, new Persona(armandoBronca.getNombre(), armandoBronca.getFechaNacimiento().plusDays(1)));
 
-        containsTest(personaSet, armandoBronca.cloneMe());
+        containsTest(personaSet, armandoBronca.clone());
 
-        equalsTest(personaSet, amadorDenador, amadorDenador.cloneMe());
+        equalsTest(amadorDenador, amadorDenador.clone());
 
         hashcodeTest(personaSet);
+    }
+
+    @Test
+    void testSetAddingOrderIsPreserved() {
+        // Crear un conjunto no modificable de números enteros
+        List<Integer> numbersList = List.of(5, 8, 3, 1, 9, 7, 0, 2, 6, 4);
+
+        // Si lo imprimo vemos que el iterador que lo recorre no lo hace en un orden determinado
+        PrintUtils.print(numbersList);
+
+        // Si creamos un LinkedHashSet con los mismos elementos de la colección (conjunto de números enteros)
+        Set<Integer> navigableSet = new LinkedHashSet<>(numbersList);
+
+        // Y lo recorremos con el iterador, podemos ver que hay un orden de aparición establecido
+        // Los elementos "aparecen" por el orden en el que fueron añadidos al conjunto
+        StringJoiner joiner = new StringJoiner(", ", "[", "]");
+        for (Integer i : navigableSet) {
+            joiner.add(i.toString());
+        }
+        System.out.println(joiner.toString());
+
+        print(navigableSet);
+    }
+
+
+    @Test
+    void testSetIsSorted() {
+        // Crear un conjunto no modificable de números enteros
+        Set<Integer> numbersSet = Set.of(5, 8, 3, 1, 9, 7, 0, 2, 6, 4);
+
+        // Si lo imprimo vemos que el iterador que lo recorre no lo hace en un orden determinado
+        print(numbersSet);
+
+        // Si creamos un TreeSet con los mismos elementos de la colección (conjunto de números enteros)
+        Set<Integer> set = new TreeSet<>(numbersSet);
+
+        // Y lo recorremos con el iterador, podemos ver que hay on orden de aparición establecido
+        // Los elementos "aparecen" por su orden natural de ordenación
+        StringJoiner joiner = new StringJoiner(", ", "[", "]");
+        for (Integer i : set) {
+            joiner.add(i.toString());
+        }
+        System.out.println(joiner.toString());
+
+        print(set);
     }
 
 }
